--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
 @import url('components/header.css');
 @import url('components/hero.css');
 @import url('components/card.css');
+@import url('components/social.css');
