--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
+@import url('components/base.css');
 @import url('components/header.css');
 @import url('components/hero.css');
 @import url('components/card.css');
 @import url('components/social.css');
+
