--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -10,7 +10,8 @@
 .hero-background img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .hero-overlay {
